// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Record
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="name"
        onChange={[MockFunction]}
        type="text"
        value="Sampath"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="manager"
    >
      Manager
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="manager"
        onChange={[MockFunction]}
        type="text"
        value="Supritha"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="deptId"
    >
      Dept
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="deptId"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Department
        </option>
        <option
          value={1}
        >
          APPS
        </option>
        <option
          value={2}
        >
          BPO
        </option>
        <option
          value={3}
        >
          HR
        </option>
        <option
          value={4}
        >
          Finance
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="nationality"
    >
      Nationality
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="nationality"
        onChange={[MockFunction]}
        type="text"
        value="JavaScript"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Record
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="name"
        onChange={[MockFunction]}
        type="text"
        value="Securing React Apps with Auth0"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="deptId"
    >
      Department
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="deptId"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Department
        </option>
        <option
          value={1}
        >
          APPS
        </option>
        <option
          value={2}
        >
          BPO
        </option>
        <option
          value={3}
        >
          HR
        </option>
        <option
          value={4}
        >
          Finance
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="nationality"
    >
      Nationality
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="nationality"
        onChange={[MockFunction]}
        type="text"
        value="JavaScript"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
